syntax = "proto3";

import "corpc_option.proto";

option cc_generic_services = true;

package corpc.thirdparty;

message TakeResponse {
    uint64 handle = 1;
}

message PutRequest {
    uint64 handle = 1;
    bool error = 2;
}

service ThirdPartyService {
    option (corpc.global_service_id) = 1;

    rpc take(corpc.Void) returns(TakeResponse)
    {
        option (corpc.need_coroutine) = true; // default is false
        option (corpc.timeout) = 10000; // default is 0
    }

    rpc put(PutRequest) returns(corpc.Void)
    {
        option (corpc.need_coroutine) = true; // default is false
        option (corpc.not_care_response) = true; // default is false
    }
}
